# s3_save_sync

./: LICENSE  README.md  pyproject.toml
src/s3_save_sync/: __init__.py  __main__.py  bucket.py  logging.py  monitor.py  runner.py
src/s3_save_sync/games/: bucket.py  default_games.toml  game.py  s3_save_sync_manifest.json  save_file_instance.py
